Added header block

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,14 +10,267 @@
   <link rel="stylesheet" href="css/bootstrap.css">
   <link rel="stylesheet" href="css/styles.css">
 </head>
+
 <body>
 
   <div class="container">
 
+    <div class="row header-top">
+
+      <div class="col-xl-auto">
+        <a href="index.html">
+          <img src="img/header-logo.svg" alt="Логотип Ставстрой" title="Логотип Ставстрой" width="199" height="39">
+        </a>
+      </div>
+
+      <div class="col-xl-auto schedule-wrapper">
+        <div class="schedule">
+          <span>08:30 - 17:30</span>
+          <span>понедельник - пятница</span>
+        </div>
+      </div>
+
+      <div class="col-xl-auto address-wrapper">
+        <address class="address">
+          <span>г. Ставрополь</span>
+          <span>ул. Индустриальная, 46 А</span>
+        </address>
+      </div>
+
+      <div class="col-xl-auto contacts-wrapper">
+        <div class="contacts">
+          <span>+7 8652 21 32 69</span>
+          <span>горячаяя линия</span>
+        </div>
+      </div>
+
+    </div>
+
+  </div>
+
+  <div class="container-fluid header-background-menu">
+    <div class="container">
+      <nav>
+        <ul class="header-menu-list">
+          <li>
+            <a href="#">ГЛАВНАЯ</a>
+          </li>
+          <li>
+            <a href="#">ОКНА</a>
+          </li>
+          <li>
+            <a href="#">ДВЕРИ</a>
+          </li>
+          <li>
+            <a href="#">МЕТАЛО КОНСТРУКЦИИ</a>
+          </li>
+          <li>
+            <a href="#">НАШИ РАБОТЫ</a>
+          </li>
+          <li>
+            <a href="#">О КОМПАНИИ</a>
+          </li>
+          <li>
+            <a href="#">КОНТАКТЫ</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+  </div>
+
+  <div class="container-fluid header-background-image">
+    <div class="container">
+      <div class="header-info-text">
+        <h1>Пластиковые окна от производителя!</h1>
+        <a href="#">Заказать окна</a>
+      </div>
+    </div>
+  </div>
+
+  <div class="container why-us">
+    <h2>Почему мы?</h2>
+    <div class="row why-us-features">
+      <div class="col-xl-4 why-us-features-item">
+        <img src="img/one-icon.svg" alt="Первое преимущество">
+        <h3>Надежная компания!</h3>
+        <p>Работаем с 2003 года! За все время остеклили более чем 127.000 квартир и офисных помещений!</p>
+      </div>
+      <div class="col-xl-4 why-us-features-item">
+        <img src="img/two-icon.svg" alt="Второе преимущество">
+        <h3>Не посредники!</h3>
+        <p>Имеем собственное производство! Осуществляем продажу без диллеров и всяких накруток!</p>
+      </div>
+      <div class="col-xl-4 why-us-features-item">
+        <img src="img/three-icon.svg" alt="Третье преимущество">
+        <h3>Экономите 30%</h3>
+        <p>Мы единственная компания в Ставрополе, которая предлагает низкие цены на окна!</p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-xl-3 why-us-product-item">
+        <div class="why-us-product-item-wrapper">
+          <img src="img/plastic-windows-image.jpg" alt="Пластиковые окна" title="Пластиковые окна" width="100"
+            height="100">
+          <span>Пластиковые окна</span>
+        </div>
+      </div>
+      <div class="col-xl-3 why-us-product-item">
+        <div class="why-us-product-item-wrapper">
+          <img src="img/plastic-doors-image.jpg" alt="Пластиковые двери" title="Пластиковые двери" width="100"
+            height="100">
+          <span>Пластиковые двери</span>
+        </div>
+      </div>
+      <div class="col-xl-3 why-us-product-item">
+        <div class="why-us-product-item-wrapper">
+          <img src="img/balconies-and-verandas-image.jpg" alt="Балконы и веранды" title="Балконы и веранды" width="100"
+            height="100">
+          <span>Балконы и веранды</span>
+        </div>
+      </div>
+      <div class="col-xl-3 why-us-product-item">
+        <div class="why-us-product-item-wrapper">
+          <img src="img/ventilated-facades-images.jpg" alt="Вентелируемые фасады" title="Вентелируемые фасады"
+            width="100" height="100">
+          <div class="why-us-product-item-text-wrapper">
+            <span>Вентелируемые фасады</span>
+            <span>от 9 000 р.</span>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </div>
+
+  <div class="container why-us-info">
+    <h3>Мы рады приветствовать Вас на сайте компании ООО «СтавСтрой»!</h3>
+
+    <p>Предметом деятельности компании ООО «Ставокно» в настоящее время являются:</p>
+
+    <ul>
+      <li> - производство и установка металлопластиковых окон и дверей;</li>
+      <li>- алюминиевых конструкций;</li>
+    </ul>
+
+    <p>Наши специалисты всегда готовы оказать Вам консультационную помощь в сфере деятельности компании.
+      Одно из главных преимуществ и методов нашей работы - идти на встречу своим постоянным и потенциальным клиентам!
+      Компания уделяет большое внимание современным тенденциям, внедрению передовых технологий и высококачественных
+      экологичных материалов, которые сертифицированы и не нанесут вреда здоровью.
+      Налаженные контакты с лучшими производителями и прямыми поставщиками материалов позволяют нам гарантировать, что
+      работы будут произведены максимально качественно и в самые короткие сроки.</p>
+
+    <p>Производство нашей компании оснащено современным высокотехнологичным оборудованием. Весь персонал прошел
+      необходимое
+      обучение.
+      Нашими клиентами являются частные лица, коммерческие предприятия, государственные организации и органы местного
+      самоуправления.<br>
+      Мы работаем для Вас!</p>
+
+  </div>
+
+  <div class="container-fluid calculate-the-cost-background">
+    <div class="container calculate-the-cost">
+      <h2>РАСCЧИТАЙТЕ СТОИМОСТЬ ОКОН СО СКИДКОЙ 49%!</h2>
+      <form class="form" action="echo.htmlacademy.ru" method="post">
+
+        <div class="left-side-form">
+          <p>Выберите профиль:</p>
+
+          <label for="">KBE
+            <input type="radio" name="" id="">
+          </label>
+
+          <label for="">Green Tech
+            <input type="radio" name="" id="">
+          </label>
+
+          <label for="">Novotex
+            <input type="radio" name="" id="">
+          </label>
+
+          <p>Выберите стеклопакет:</p>
+
+          <label for="">Однокамерный
+            <input type="radio" name="" id="">
+          </label>
+
+          <label for="">Двухкамерный
+            <input type="radio" name="" id="">
+          </label>
+
+          <label for="">Энергосберегающий
+            <input type="radio" name="" id="">
+          </label>
+
+          <p>Выберете тип окна:</p>
+
+          <label for="">Одностворчатое
+            <div class="window-wrapper">
+              <img src="img/window-one-image.jpg" alt="Одностворчатое окно" width="81" height="109">
+              <input type="radio" name="" id="">
+            </div>
+          </label>
+
+          <label for="">Двухстворчатое
+            <div class="window-wrapper">
+              <img src="img/window-two-image.jpg" alt="Двухстворчатое окно" width="98" height="108">
+              <input type="radio" name="" id="">
+            </div>
+          </label>
+
+          <label for="">Трехстворчатое
+            <div class="window-wrapper">
+              <img src="img/window-three-image.jpg" alt="Трехстворчатое окно" width="102" height="109">
+              <input type="radio" name="" id="">
+            </div>
+          </label>
+
+          <label for="">Балконный блок
+            <div class="window-wrapper">
+              <img src="img/window-four-image.jpg" alt="Балконный блок" width="112" height="110">
+              <input type="radio" name="" id="">
+            </div>
+          </label>
+
+          <p>Хотите цветные окна?</p>
+
+          <label for="">да
+            <input type="radio" name="" id="">
+          </label>
+
+          <label for="">нет
+            <input type="radio" name="" id="">
+          </label>
+        </div>
+
+        <div class="devider-vertical">
+
+        </div>
+
+        <div class="right-side-form">
+          <label for="">
+            <input type="text" name="" id="" value="Имя">
+          </label>
+
+          <label for="">
+            <input type="text" name="" id="" value="Телефон">
+          </label>
+
+          <button type="submit">ОТПРАВИТЬ ЗАЯВКУ НА РАСЧЕТ</button>
+
+          <label for="">
+            <input type="radio" name="" id="">
+            Согласие на обработку персональных данных
+          </label>
+        </div>
+
+      </form>
+    </div>
   </div>
 
   <script src="js/jquery.min.js"></script>
   <script src="js/bootstrap.bundle.min.js"></script>
   <script src="js/scripts.js"></script>
 </body>
+
 </html>
