Added new blocks

--- a/index.html
+++ b/index.html
@@ -268,6 +268,99 @@
     </div>
   </div>
 
+  <div class="container another-production">
+    <h2>ДРУГАЯ ПРОДУКЦИЯ</h2>
+    <div class="row">
+      <div class="col-xl-4">
+        <div class="another-production-item">
+          <img src="img/garage-doors-image.jpg" alt="">
+          <span>Гаражные ворота</span>
+        </div>
+      </div>
+      <div class="col-xl-4">
+        <div class="another-production-item">
+          <img src="img/shutters-image.jpg" alt="">
+          <span>Ролставни</span>
+        </div>
+      </div>
+      <div class="col-xl-4">
+        <div class="another-production-item">
+          <img src="img/mosquito-net-image.jpg" alt="">
+          <span>Москитные сетки</span>
+        </div>
+      </div>
+      <div class="col-xl-4">
+        <div class="another-production-item">
+          <img src="img/handle-opening-limiter-image.jpg" alt="">
+          <span>Ограничитель открывания ручки</span>
+        </div>
+      </div>
+      <div class="col-xl-4">
+        <div class="another-production-item">
+          <img src="img/handle-with-lock-image.jpg" alt="">
+          <span>Ручка с замком </span>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="container our-partners">
+    <h2>НАШИ ПАРТНЕРЫ И ПОСТАВЩИКИ</h2>
+    <p>Мы тщательно выбираем все детали наших изделий. Нашими основными поставщиками являются:</p>
+  </div>
+
+  <div class="container we-are-proud">
+    <h2>МЫ ГОРДИМСЯ СВОЕЙ РАБОТОЙ</h2>
+    <p>ОЦЕНИТЕ НАШИ ПОСЛЕДНИЕ ПРОЕКТЫ</p>
+    <div class="row">
+      <div class="col-xl-3 we-are-proud-item">
+        <img src="img/we-are-proud-image.jpg" alt="">
+      </div>
+      <div class="col-xl-3 we-are-proud-item">
+        <img src="img/we-are-proud-image.jpg" alt="">
+      </div>
+      <div class="col-xl-3 we-are-proud-item">
+        <img src="img/we-are-proud-image.jpg" alt="">
+      </div>
+      <div class="col-xl-3 we-are-proud-item">
+        <img src="img/we-are-proud-image.jpg" alt="">
+      </div>
+      <div class="col-xl-3 we-are-proud-item">
+        <img src="img/we-are-proud-image.jpg" alt="">
+      </div>
+      <div class="col-xl-3 we-are-proud-item">
+        <img src="img/we-are-proud-image.jpg" alt="">
+      </div>
+      <div class="col-xl-3 we-are-proud-item">
+        <img src="img/we-are-proud-image.jpg" alt="">
+      </div>
+      <div class="col-xl-3 we-are-proud-item">
+        <img src="img/we-are-proud-image.jpg" alt="">
+      </div>
+    </div>
+    <a href="#">Вызвать замерщика</a>
+    <a href="#">Посмотреть все работы</a>
+  </div>
+
+  <div class="container windows-company">
+    <h2>Оконная компания №1</h2>
+    <p>Почему именно «Окна Роста»?</p>
+    <div class="windows-company-info">
+      <div class="windows-company-info-item">
+        <span>304 680</span>
+        <p>СЧАСТЛИВЫХ КЛИЕНТОВ</p>
+      </div>
+      <div class="windows-company-info-item">
+        <span>2 500 000</span>
+        <p>УСТАНОВЛЕННЫХ ОКОН</p>
+      </div>
+      <div class="windows-company-info-item">
+        <span>22</span>
+        <p>ГОДА УСПЕШНОЙ РАБОТЫ</p>
+      </div>
+    </div>
+  </div>
+
   <script src="js/jquery.min.js"></script>
   <script src="js/bootstrap.bundle.min.js"></script>
   <script src="js/scripts.js"></script>
