Added index.html page

--- a/index.html
+++ b/index.html
@@ -361,6 +361,79 @@
     </div>
   </div>
 
+  <div class="container-fluid footer-background">
+    <div class="container footer">
+      <div class="row footer-items">
+        <div class="col-xl-auto footer-item">
+          <a href="index.html">
+            <img src="img/footer-logo.svg" alt="Логотип Ставстрой">
+          </a>
+        </div>
+        <div class="col-xl-auto footer-item">
+          <ul>
+            <li>
+              <a href="#">Главная</a>
+            </li>
+            <li>
+              <a href="#">Окна</a>
+            </li>
+            <li>
+              <a href="#">Двери</a>
+            </li>
+            <li>
+              <a href="#">Метало конструкции</a>
+            </li>
+            <li>
+              <a href="#">О компании</a>
+            </li>
+            <li>
+              <a href="#">Контакты</a>
+            </li>
+          </ul>
+        </div>
+        <div class="col-xl-auto footer-item">
+          <ul>
+            <li>
+              <a href="#">Гаражные ворота</a>
+            </li>
+            <li>
+              <a href="#">Ролставни</a>
+            </li>
+            <li>
+              <a href="#">Москитные сетки</a>
+            </li>
+            <li>
+              <a href="#">Ограничитель открывания ручки</a>
+            </li>
+            <li>
+              <a href="#">Ручка с замком</a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="col-xl-auto footer-item">
+
+          <div class="footer-schedule">
+            <span>08:30 - 17:30</span>
+            <span>понедельник - пятница</span>
+          </div>
+
+          <address class="footer-address">
+            <span>г. Ставрополь</span>
+            <span>ул. Индустриальная, 46 А</span>
+          </address>
+
+          <div class="footer-contacts">
+            <span>+7 8652 21 32 69</span>
+            <span>горячаяя линия</span>
+          </div>
+
+        </div>
+
+      </div>
+    </div>
+  </div>
+
   <script src="js/jquery.min.js"></script>
   <script src="js/bootstrap.bundle.min.js"></script>
   <script src="js/scripts.js"></script>
