Added windows.html page

--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
       <nav>
         <ul class="header-menu-list">
           <li>
-            <a href="#">ГЛАВНАЯ</a>
+            <a href="index.html">ГЛАВНАЯ</a>
           </li>
           <li>
-            <a href="#">ОКНА</a>
+            <a href="windows.html">ОКНА</a>
           </li>
           <li>
             <a href="#">ДВЕРИ</a>
@@ -130,7 +130,7 @@
       </div>
       <div class="col-xl-3 why-us-product-item">
         <div class="why-us-product-item-wrapper">
-          <img src="img/ventilated-facades-images.jpg" alt="Вентелируемые фасады" title="Вентелируемые фасады"
+          <img src="img/ventilated-facades-image.jpg" alt="Вентелируемые фасады" title="Вентелируемые фасады"
             width="100" height="100">
           <div class="why-us-product-item-text-wrapper">
             <span>Вентелируемые фасады</span>
