Added new pages

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <a href="#">ДВЕРИ</a>
           </li>
           <li>
-            <a href="#">МЕТАЛО КОНСТРУКЦИИ</a>
+            <a href="metal-plastic-doors.html">МЕТАЛО КОНСТРУКЦИИ</a>
           </li>
           <li>
             <a href="#">НАШИ РАБОТЫ</a>
