Added contacts.html page

--- a/contacts.html
+++ b/contacts.html
@@ -84,28 +84,42 @@
       <ul>
         <li><a href="#">Главная</a></li>
         <span>/</span>
-        <li><a href="#">Рассрочка</a></li>
+        <li><a href="#">Контакты</a></li>
       </ul>
     </div>
   </div>
 
-  <div class="container plastic-windows">
-    <h2>Рассрочка</h2>
+  <div class="container contacts">
+    <h2>Контакты</h2>
     <div class="row">
-      <div class="col-xl-3 plastic-windows-image">
-        <img src="img/aluminum-doors-images.jpg" alt="">
-      </div>
-      <div class="col-xl-9 plastic-windows-text">
+      <div class="col-xl-7 contacts-text">
 
-        <p>Мы стараемся соответствовать самым высоким ожиданиям наших клиентов,поэтому предлагаем возможности для
-          остекления по оптимальным ценам и в кратчайшие сроки.</p>
-        <p>РАССРОЧКА позволит Вам четко спланировать свои расходы, ведь Вам не придется оплачивать свою покупку сразу.
-        </p>
-        <p>Вы можете внести первоначальный взнос 30%, а оставшуюся сумму Вашей покупки разделить на срок до 3-х месяцев
-          и
-          вносить платежи равными долями. Оформление рассрочки сразу, после бесплатного замера в течение 15 минут!
-          Необходимый документ – паспорт.</p>
-          <a href="#">Заказать в расрочку</a>
+        <address class="contacts-text-address">
+          <p>Наш адрес:</p>
+          <p>Г. Ставрополь ул. Индустриальная, 46 А.</p>
+        </address>
+
+        <div class="contacts-text-contacts">
+          <p>Тел./Факс:</p>
+          <a href="tel:+78652334323">+7 (8652) 33-43-23</a>, <a href="tel:+78652213269">+7 (8652)21-32-69</a>
+        </div>
+
+        <div class="contacts-text-email">
+          <p> E-mail:</p>
+          <a href="mailto:stavokno@mail.ru">stavokno@mail.ru</a>
+        </div>
+
+        <p class="contacts-text-schedule">Режим работы:<br>
+          Офис работает с 09:00 до 18:00 с понедельника по пятницу, суббота и воскресенье - выходные дни.
+          Наши менеджеры ждут Ваших звонков ежедневно с 09:00 до 18:00.</p>
+
+      </div>
+      <div class="col-xl-5 contacts-map">
+        <iframe
+          src="https://yandex.ru/map-widget/v1/?um=constructor%3A79dfbf66b6d03fac9a14efddb5d73675034a4f5005dccd2a5fb22532fbc4f9a9&amp;source=constructor"
+          width="500" height="400" frameborder="0">
+          <img src="img/map.jpg" alt="">
+        </iframe>
       </div>
     </div>
 
