--- a/index.html
+++ b/index.html
@@ -59,19 +59,19 @@
             <a href="windows.html">ОКНА</a>
           </li>
           <li>
-            <a href="#">ДВЕРИ</a>
+            <a href="aluminum-doors.html">ДВЕРИ</a>
           </li>
           <li>
             <a href="metal-plastic-doors.html">МЕТАЛО КОНСТРУКЦИИ</a>
           </li>
           <li>
-            <a href="#">НАШИ РАБОТЫ</a>
+            <a href="our-works.html">НАШИ РАБОТЫ</a>
           </li>
           <li>
             <a href="#">О КОМПАНИИ</a>
           </li>
           <li>
-            <a href="#">КОНТАКТЫ</a>
+            <a href="contacts.html">КОНТАКТЫ</a>
           </li>
         </ul>
       </nav>
@@ -82,7 +82,7 @@
     <div class="container">
       <div class="header-info-text">
         <h1>Пластиковые окна от производителя!</h1>
-        <a href="#">Заказать окна</a>
+        <a href="#" data-toggle="modal" data-target="#exampleModal">Заказать окна</a>
       </div>
     </div>
   </div>
@@ -168,7 +168,7 @@
 
   </div>
 
-  <div class="container-fluid calculate-the-cost-background">
+  <!-- <div class="container-fluid calculate-the-cost-background">
     <div class="container calculate-the-cost">
       <h2>РАСCЧИТАЙТЕ СТОИМОСТЬ ОКОН СО СКИДКОЙ 49%!</h2>
       <form class="form" action="echo.htmlacademy.ru" method="post">
@@ -266,7 +266,7 @@
 
       </form>
     </div>
-  </div>
+  </div> -->
 
   <div class="container another-production">
     <h2>ДРУГАЯ ПРОДУКЦИЯ</h2>
@@ -431,6 +431,38 @@
         </div>
 
       </div>
+    </div>
+  </div>
+
+  <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog" role="document">
+
+      <form action="" method="post">
+        <div class="modal-content">
+          <div class="modal-header">
+            <p>Заполните данные для связи</p>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <p>Мы ответим Вам на все интересующие Вас вопросы в режиме телефонного разговора</p>
+            <form id="form-contac" class="form-element" autocomplete="off" method="POST">
+              <div class="contacts-wrapper">
+                <label for="name">
+                  <input id="name" name="name" type="text" placeholder="Введите ваше имя" />
+                </label>
+                <label for="email">
+                  <input id="email" name="email" type="email" placeholder="E-mail адрес" />
+                </label>
+              </div>
+              <button class="bayvz form-input__button send-button" type="submit">ОТПРАВИТЬ</button>
+            </form>
+          </div>
+        </div>
+      </form>
+
     </div>
   </div>
 
