--- a/contacts.html
+++ b/contacts.html
@@ -89,7 +89,7 @@
     </div>
   </div>
 
-  <div class="container contacts">
+  <div class="container contacts-page">
     <h2>Контакты</h2>
     <div class="row">
       <div class="col-xl-7 contacts-text">
