--- a/index.html
+++ b/index.html
@@ -338,8 +338,8 @@
         <img src="img/we-are-proud-image.jpg" alt="">
       </div>
     </div>
-    <a href="#">Вызвать замерщика</a>
-    <a href="#">Посмотреть все работы</a>
+    <a href="#" data-toggle="modal" data-target="#exampleModal">Вызвать замерщика</a>
+    <a href="our-works.html">Посмотреть все работы</a>
   </div>
 
   <div class="container windows-company">
@@ -437,7 +437,6 @@
   <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
     aria-hidden="true">
     <div class="modal-dialog" role="document">
-
       <form action="" method="post">
         <div class="modal-content">
           <div class="modal-header">
@@ -462,7 +461,6 @@
           </div>
         </div>
       </form>
-
     </div>
   </div>
 
