Update head info

--- a/contacts.html
+++ b/contacts.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Ставстрой - Главная</title>
+  <title>Ставстрой - Контакты</title>
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/bootstrap.css">
   <link rel="stylesheet" href="css/styles.css">
@@ -60,19 +60,19 @@
             <a href="windows.html">ОКНА</a>
           </li>
           <li>
-            <a href="#">ДВЕРИ</a>
+            <a href="aluminum-doors.html">ДВЕРИ</a>
           </li>
           <li>
-            <a href="#">МЕТАЛО КОНСТРУКЦИИ</a>
+            <a href="metal-plastic-doors.html">МЕТАЛО КОНСТРУКЦИИ</a>
           </li>
           <li>
-            <a href="#">НАШИ РАБОТЫ</a>
+            <a href="our-works.html">НАШИ РАБОТЫ</a>
           </li>
           <li>
             <a href="#">О КОМПАНИИ</a>
           </li>
           <li>
-            <a href="#">КОНТАКТЫ</a>
+            <a href="contacts.html">КОНТАКТЫ</a>
           </li>
         </ul>
       </nav>
