--- a/installment-plan.html
+++ b/installment-plan.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Ставстрой - Главная</title>
+  <title>Ставстрой - Рассрочка</title>
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/bootstrap.css">
   <link rel="stylesheet" href="css/styles.css">
@@ -60,19 +60,19 @@
             <a href="windows.html">ОКНА</a>
           </li>
           <li>
-            <a href="#">ДВЕРИ</a>
+            <a href="aluminum-doors.html">ДВЕРИ</a>
           </li>
           <li>
-            <a href="#">МЕТАЛО КОНСТРУКЦИИ</a>
+            <a href="metal-plastic-doors.html">МЕТАЛО КОНСТРУКЦИИ</a>
           </li>
           <li>
-            <a href="#">НАШИ РАБОТЫ</a>
+            <a href="our-works.html">НАШИ РАБОТЫ</a>
           </li>
           <li>
             <a href="#">О КОМПАНИИ</a>
           </li>
           <li>
-            <a href="#">КОНТАКТЫ</a>
+            <a href="contacts.html">КОНТАКТЫ</a>
           </li>
         </ul>
       </nav>
@@ -105,7 +105,7 @@
           и
           вносить платежи равными долями. Оформление рассрочки сразу, после бесплатного замера в течение 15 минут!
           Необходимый документ – паспорт.</p>
-          <a href="#">Заказать в расрочку</a>
+        <a href="#">Заказать в расрочку</a>
       </div>
     </div>
 
