--- a/our-works.html
+++ b/our-works.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Ставстрой - Главная</title>
+  <title>Ставстрой - Наши работы</title>
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/bootstrap.css">
   <link rel="stylesheet" href="css/styles.css">
@@ -60,19 +60,19 @@
             <a href="windows.html">ОКНА</a>
           </li>
           <li>
-            <a href="#">ДВЕРИ</a>
+            <a href="aluminum-doors.html">ДВЕРИ</a>
           </li>
           <li>
-            <a href="#">МЕТАЛО КОНСТРУКЦИИ</a>
+            <a href="metal-plastic-doors.html">МЕТАЛО КОНСТРУКЦИИ</a>
           </li>
           <li>
-            <a href="#">НАШИ РАБОТЫ</a>
+            <a href="our-works.html">НАШИ РАБОТЫ</a>
           </li>
           <li>
             <a href="#">О КОМПАНИИ</a>
           </li>
           <li>
-            <a href="#">КОНТАКТЫ</a>
+            <a href="contacts.html">КОНТАКТЫ</a>
           </li>
         </ul>
       </nav>
@@ -105,89 +105,89 @@
         <img src="img/we-are-proud-image.jpg" alt="">
       </div>
       <div class="col-xl-3 example-of-works-item">
-          <img src="img/we-are-proud-image.jpg" alt="">
-        </div>
-        <div class="col-xl-3 example-of-works-item">
-          <img src="img/we-are-proud-image.jpg" alt="">
-        </div>
-        <div class="col-xl-3 example-of-works-item">
-          <img src="img/we-are-proud-image.jpg" alt="">
-        </div>
-        <div class="col-xl-3 example-of-works-item">
-          <img src="img/we-are-proud-image.jpg" alt="">
-        </div>
-        <div class="col-xl-3 example-of-works-item">
-            <img src="img/we-are-proud-image.jpg" alt="">
-          </div>
-          <div class="col-xl-3 example-of-works-item">
-            <img src="img/we-are-proud-image.jpg" alt="">
-          </div>
-          <div class="col-xl-3 example-of-works-item">
-            <img src="img/we-are-proud-image.jpg" alt="">
-          </div>
-          <div class="col-xl-3 example-of-works-item">
-            <img src="img/we-are-proud-image.jpg" alt="">
-          </div>
-          <div class="col-xl-3 example-of-works-item">
-              <img src="img/we-are-proud-image.jpg" alt="">
-            </div>
-            <div class="col-xl-3 example-of-works-item">
-              <img src="img/we-are-proud-image.jpg" alt="">
-            </div>
-            <div class="col-xl-3 example-of-works-item">
-              <img src="img/we-are-proud-image.jpg" alt="">
-            </div>
-            <div class="col-xl-3 example-of-works-item">
-              <img src="img/we-are-proud-image.jpg" alt="">
-            </div>
-            <div class="col-xl-3 example-of-works-item">
-                <img src="img/we-are-proud-image.jpg" alt="">
-              </div>
-              <div class="col-xl-3 example-of-works-item">
-                <img src="img/we-are-proud-image.jpg" alt="">
-              </div>
-              <div class="col-xl-3 example-of-works-item">
-                <img src="img/we-are-proud-image.jpg" alt="">
-              </div>
-              <div class="col-xl-3 example-of-works-item">
-                <img src="img/we-are-proud-image.jpg" alt="">
-              </div>
-              <div class="col-xl-3 example-of-works-item">
-                  <img src="img/we-are-proud-image.jpg" alt="">
-                </div>
-                <div class="col-xl-3 example-of-works-item">
-                  <img src="img/we-are-proud-image.jpg" alt="">
-                </div>
-                <div class="col-xl-3 example-of-works-item">
-                  <img src="img/we-are-proud-image.jpg" alt="">
-                </div>
-                <div class="col-xl-3 example-of-works-item">
-                  <img src="img/we-are-proud-image.jpg" alt="">
-                </div>
-                <div class="col-xl-3 example-of-works-item">
-                    <img src="img/we-are-proud-image.jpg" alt="">
-                  </div>
-                  <div class="col-xl-3 example-of-works-item">
-                    <img src="img/we-are-proud-image.jpg" alt="">
-                  </div>
-                  <div class="col-xl-3 example-of-works-item">
-                    <img src="img/we-are-proud-image.jpg" alt="">
-                  </div>
-                  <div class="col-xl-3 example-of-works-item">
-                    <img src="img/we-are-proud-image.jpg" alt="">
-                  </div>
-                  <div class="col-xl-3 example-of-works-item">
-                      <img src="img/we-are-proud-image.jpg" alt="">
-                    </div>
-                    <div class="col-xl-3 example-of-works-item">
-                      <img src="img/we-are-proud-image.jpg" alt="">
-                    </div>
-                    <div class="col-xl-3 example-of-works-item">
-                      <img src="img/we-are-proud-image.jpg" alt="">
-                    </div>
-                    <div class="col-xl-3 example-of-works-item">
-                      <img src="img/we-are-proud-image.jpg" alt="">
-                    </div>
+        <img src="img/we-are-proud-image.jpg" alt="">
+      </div>
+      <div class="col-xl-3 example-of-works-item">
+        <img src="img/we-are-proud-image.jpg" alt="">
+      </div>
+      <div class="col-xl-3 example-of-works-item">
+        <img src="img/we-are-proud-image.jpg" alt="">
+      </div>
+      <div class="col-xl-3 example-of-works-item">
+        <img src="img/we-are-proud-image.jpg" alt="">
+      </div>
+      <div class="col-xl-3 example-of-works-item">
+        <img src="img/we-are-proud-image.jpg" alt="">
+      </div>
+      <div class="col-xl-3 example-of-works-item">
+        <img src="img/we-are-proud-image.jpg" alt="">
+      </div>
+      <div class="col-xl-3 example-of-works-item">
+        <img src="img/we-are-proud-image.jpg" alt="">
+      </div>
+      <div class="col-xl-3 example-of-works-item">
+        <img src="img/we-are-proud-image.jpg" alt="">
+      </div>
+      <div class="col-xl-3 example-of-works-item">
+        <img src="img/we-are-proud-image.jpg" alt="">
+      </div>
+      <div class="col-xl-3 example-of-works-item">
+        <img src="img/we-are-proud-image.jpg" alt="">
+      </div>
+      <div class="col-xl-3 example-of-works-item">
+        <img src="img/we-are-proud-image.jpg" alt="">
+      </div>
+      <div class="col-xl-3 example-of-works-item">
+        <img src="img/we-are-proud-image.jpg" alt="">
+      </div>
+      <div class="col-xl-3 example-of-works-item">
+        <img src="img/we-are-proud-image.jpg" alt="">
+      </div>
+      <div class="col-xl-3 example-of-works-item">
+        <img src="img/we-are-proud-image.jpg" alt="">
+      </div>
+      <div class="col-xl-3 example-of-works-item">
+        <img src="img/we-are-proud-image.jpg" alt="">
+      </div>
+      <div class="col-xl-3 example-of-works-item">
+        <img src="img/we-are-proud-image.jpg" alt="">
+      </div>
+      <div class="col-xl-3 example-of-works-item">
+        <img src="img/we-are-proud-image.jpg" alt="">
+      </div>
+      <div class="col-xl-3 example-of-works-item">
+        <img src="img/we-are-proud-image.jpg" alt="">
+      </div>
+      <div class="col-xl-3 example-of-works-item">
+        <img src="img/we-are-proud-image.jpg" alt="">
+      </div>
+      <div class="col-xl-3 example-of-works-item">
+        <img src="img/we-are-proud-image.jpg" alt="">
+      </div>
+      <div class="col-xl-3 example-of-works-item">
+        <img src="img/we-are-proud-image.jpg" alt="">
+      </div>
+      <div class="col-xl-3 example-of-works-item">
+        <img src="img/we-are-proud-image.jpg" alt="">
+      </div>
+      <div class="col-xl-3 example-of-works-item">
+        <img src="img/we-are-proud-image.jpg" alt="">
+      </div>
+      <div class="col-xl-3 example-of-works-item">
+        <img src="img/we-are-proud-image.jpg" alt="">
+      </div>
+      <div class="col-xl-3 example-of-works-item">
+        <img src="img/we-are-proud-image.jpg" alt="">
+      </div>
+      <div class="col-xl-3 example-of-works-item">
+        <img src="img/we-are-proud-image.jpg" alt="">
+      </div>
+      <div class="col-xl-3 example-of-works-item">
+        <img src="img/we-are-proud-image.jpg" alt="">
+      </div>
+      <div class="col-xl-3 example-of-works-item">
+        <img src="img/we-are-proud-image.jpg" alt="">
+      </div>
     </div>
     <a href="#">Вызвать замерщика</a>
     <a href="#">Посмотреть все работы</a>
