--- a/aluminum-doors.html
+++ b/aluminum-doors.html
@@ -103,14 +103,14 @@
 
         <h3>Алюминиевые двери – основные преимущества</h3>
 
-        <ul>
+        <ol>
           <li>Устойчивость к деформации и коррозии – алюминиевые входные двери не меняют своей формы на протяжении
             десятилетий; не поддаются влиянию окружающей среды.</li>
           <li>Отличная тепло- и звукоизоляция.</li>
           <li>Не требуют особого ухода.</li>
           <li>Экологично чистые.</li>
           <li>Недорогие.</li>
-        </ul>
+        </ol>
 
       </div>
     </div>
@@ -121,20 +121,20 @@
       читайте ниже.</p>
     <p>4 показателя качественных алюминиевых дверей</p>
 
-    <ul>
+    <ol>
       <li>Профиль – несущий элемент всей конструкции. Мы предлагаем качественную продукцию отечественных и зарубежных
         производителей.</li>
       <li>Фурнитура – прочные доводчики, надежные замки, удобные ручки.</li>
       <li>Стеклопакет – одно или двухкамерный.</li>
       <li>Монтаж – от профессионализма установщиков зависит прочность и долговечность дверей.</li>
-    </ul>
+    </ol>
 
     <p>Алюминиевые двери – визитная карточка любого здания. Их внешний вид и работа являются составляющими впечатления
       каждого потенциального клиента. Стоит ли экономить?</p>
 
     <h2>Виды открывания алюминиевых дверей</h2>
 
-    <ul>
+    <ol>
       <li>Распашные – самая простая и недорогая конструкция. Рассчитана на небольшое количество посетителей. Может
         открываться как одна, так и две створки.</li>
       <li>Маятниковые – створки открываются в обе стороны. Такие двери рассчитаны на среднее количество людей.
@@ -145,7 +145,7 @@
         автоматическом режиме.</li>
       <li>Револьверные отличаются высокой пропускной способностью; могут иметь несколько лопастей; защищают холл от
         сквозняков и холода.</li>
-    </ul>
+    </ol>
 
     <p>Изготовление алюминиевых дверей любых размеров и конструкция – основная специализация компании «СтавОкно».
       Опытные
@@ -197,26 +197,26 @@
           </a>
         </div>
         <div class="col-xl-auto footer-item footer-inner-item">
-          <ul>
-            <li>
-              <a href="#">Главная</a>
-            </li>
-            <li>
-              <a href="#">Окна</a>
-            </li>
-            <li>
-              <a href="#">Двери</a>
-            </li>
-            <li>
-              <a href="#">Метало конструкции</a>
-            </li>
-            <li>
-              <a href="#">О компании</a>
-            </li>
-            <li>
-              <a href="#">Контакты</a>
-            </li>
-          </ul>
+            <ul>
+                <li>
+                  <a href="index.html">Главная</a>
+                </li>
+                <li>
+                  <a href="windows.html">Окна</a>
+                </li>
+                <li>
+                  <a href="aluminum-doors.html">Двери</a>
+                </li>
+                <li>
+                  <a href="metal-plastic-doors.html">Метало конструкции</a>
+                </li>
+                <li>
+                  <a href="#">О компании</a>
+                </li>
+                <li>
+                  <a href="contacts.html">Контакты</a>
+                </li>
+              </ul>
         </div>
         <div class="col-xl-auto footer-item footer-inner-item">
           <ul>
