--- a/contacts.html
+++ b/contacts.html
@@ -109,7 +109,7 @@
           <a href="mailto:stavokno@mail.ru">stavokno@mail.ru</a>
         </div>
 
-        <p class="contacts-text-schedule">Режим работы:<br>
+        <p class="contacts-text-schedule"><b>Режим работы:</b><br>
           Офис работает с 09:00 до 18:00 с понедельника по пятницу, суббота и воскресенье - выходные дни.
           Наши менеджеры ждут Ваших звонков ежедневно с 09:00 до 18:00.</p>
 
@@ -136,22 +136,22 @@
         <div class="col-xl-auto footer-item footer-inner-item">
           <ul>
             <li>
-              <a href="#">Главная</a>
+              <a href="index.html">Главная</a>
             </li>
             <li>
-              <a href="#">Окна</a>
+              <a href="windows.html">Окна</a>
             </li>
             <li>
-              <a href="#">Двери</a>
+              <a href="aluminum-doors.html">Двери</a>
             </li>
             <li>
-              <a href="#">Метало конструкции</a>
+              <a href="metal-plastic-doors.html">Метало конструкции</a>
             </li>
             <li>
               <a href="#">О компании</a>
             </li>
             <li>
-              <a href="#">Контакты</a>
+              <a href="contacts.html">Контакты</a>
             </li>
           </ul>
         </div>
