--- a/metal-plastic-doors.html
+++ b/metal-plastic-doors.html
@@ -84,13 +84,13 @@
       <ul>
         <li><a href="#">Главная</a></li>
         <span>/</span>
-        <li><a href="#">Окна</a></li>
+        <li><a href="#">Металлопластиковые двери</a></li>
       </ul>
     </div>
   </div>
 
-  <div class="container plastic-windows">
-    <h2>Пластиковые окна</h2>
+  <div class="container plastic-windows metal-plastic-doors-wrapper">
+    <h2>Металлопластиковые двери</h2>
     <div class="row">
       <div class="col-xl-3 plastic-windows-image">
         <img src="img/metal-plastic-doors-image.jpg" alt="">
@@ -137,12 +137,12 @@
 
     <h2>Основные правила ухода за окнами:</h2>
 
-    <ul>
+    <ol>
       <li>Во время влажной уборки, которую можно периодически осуществлять самостоятельно, следите, чтобы вода не
         попадала на детали фурнитуры.</li>
       <li>При отделочных работах все детали фурнитуры нужно тщательно защитить от возможного попадания отделочных
         материалов.</li>
-    </ul>
+    </ol>
 
     <p class="windows-text">Выполнение этих несложных правил позволит намного продлить жизнь фурнитуре на Ваших окнах.
     </p>
@@ -180,7 +180,7 @@
       монтажный шов должен быть воздухо- и влагонепроницаемым изнутри и вентилируемым наружу. При этом монтаж
       производится в три слоя:</p>
 
-    <ul>
+    <ul class="metal-plastic-list">
       <li>- средний (пена), служит для эффективной тепло- и шумоизоляции;</li>
       <li> - внешний (паропроницаемые саморасширяющиеся уплотнительные ленты (ПСУЛ)), изолирует от природных факторов,
         таких
@@ -229,22 +229,22 @@
         <div class="col-xl-auto footer-item footer-inner-item">
           <ul>
             <li>
-              <a href="#">Главная</a>
+              <a href="index.html">Главная</a>
             </li>
             <li>
-              <a href="#">Окна</a>
+              <a href="windows.html">Окна</a>
             </li>
             <li>
-              <a href="#">Двери</a>
+              <a href="aluminum-doors.html">Двери</a>
             </li>
             <li>
-              <a href="#">Метало конструкции</a>
+              <a href="metal-plastic-doors.html">Метало конструкции</a>
             </li>
             <li>
               <a href="#">О компании</a>
             </li>
             <li>
-              <a href="#">Контакты</a>
+              <a href="contacts.html">Контакты</a>
             </li>
           </ul>
         </div>
