--- a/our-works.html
+++ b/our-works.html
@@ -190,7 +190,6 @@
       </div>
     </div>
     <a href="#">Вызвать замерщика</a>
-    <a href="#">Посмотреть все работы</a>
   </div>
 
   <div class="container-fluid footer-inner-background">
@@ -204,22 +203,22 @@
         <div class="col-xl-auto footer-item footer-inner-item">
           <ul>
             <li>
-              <a href="#">Главная</a>
+              <a href="index.html">Главная</a>
             </li>
             <li>
-              <a href="#">Окна</a>
+              <a href="windows.html">Окна</a>
             </li>
             <li>
-              <a href="#">Двери</a>
+              <a href="aluminum-doors.html">Двери</a>
             </li>
             <li>
-              <a href="#">Метало конструкции</a>
+              <a href="metal-plastic-doors.html">Метало конструкции</a>
             </li>
             <li>
               <a href="#">О компании</a>
             </li>
             <li>
-              <a href="#">Контакты</a>
+              <a href="contacts.html">Контакты</a>
             </li>
           </ul>
         </div>
