--- a/our-works.html
+++ b/our-works.html
@@ -17,28 +17,28 @@
 
     <div class="row header-top">
 
-      <div class="col-xl-auto">
+      <div class="col-lg-auto col-xl-auto">
         <a href="index.html">
           <img src="img/header-inner-logo.svg" alt="Логотип Ставстрой" title="Логотип Ставстрой" width="199"
             height="39">
         </a>
       </div>
 
-      <div class="col-xl-auto schedule-wrapper">
+      <div class="col-lg-auto col-xl-auto schedule-wrapper">
         <div class="schedule">
           <span>08:30 - 17:30</span>
           <span>понедельник - пятница</span>
         </div>
       </div>
 
-      <div class="col-xl-auto address-wrapper">
+      <div class="col-lg-auto col-xl-auto address-wrapper">
         <address class="address">
           <span>г. Ставрополь</span>
           <span>ул. Индустриальная, 46 А</span>
         </address>
       </div>
 
-      <div class="col-xl-auto contacts-wrapper">
+      <div class="col-lg-auto col-xl-auto contacts-wrapper">
         <div class="contacts">
           <span>+7 8652 21 32 69</span>
           <span>горячаяя линия</span>
@@ -92,100 +92,100 @@
   <div class="container example-of-works our-works">
     <h2>Наши работы</h2>
     <div class="row">
-      <div class="col-xl-3 example-of-works-item">
+      <div class="col-sm-6 col-lg-4 col-xl-3 example-of-works-item">
         <img src="img/we-are-proud-image.jpg" alt="">
       </div>
-      <div class="col-xl-3 example-of-works-item">
+      <div class="col-sm-6 col-lg-4 col-xl-3 example-of-works-item">
         <img src="img/we-are-proud-image.jpg" alt="">
       </div>
-      <div class="col-xl-3 example-of-works-item">
+      <div class="col-sm-6 col-lg-4 col-xl-3 example-of-works-item">
         <img src="img/we-are-proud-image.jpg" alt="">
       </div>
-      <div class="col-xl-3 example-of-works-item">
+      <div class="col-sm-6 col-lg-4 col-xl-3 example-of-works-item">
         <img src="img/we-are-proud-image.jpg" alt="">
       </div>
-      <div class="col-xl-3 example-of-works-item">
+      <div class="col-sm-6 col-lg-4 col-xl-3 example-of-works-item">
         <img src="img/we-are-proud-image.jpg" alt="">
       </div>
-      <div class="col-xl-3 example-of-works-item">
+      <div class="col-sm-6 col-lg-4 col-xl-3 example-of-works-item">
         <img src="img/we-are-proud-image.jpg" alt="">
       </div>
-      <div class="col-xl-3 example-of-works-item">
+      <div class="col-sm-6 col-lg-4 col-xl-3 example-of-works-item">
         <img src="img/we-are-proud-image.jpg" alt="">
       </div>
-      <div class="col-xl-3 example-of-works-item">
+      <div class="col-sm-6 col-lg-4 col-xl-3 example-of-works-item">
         <img src="img/we-are-proud-image.jpg" alt="">
       </div>
-      <div class="col-xl-3 example-of-works-item">
+      <div class="col-sm-6 col-lg-4 col-xl-3 example-of-works-item">
         <img src="img/we-are-proud-image.jpg" alt="">
       </div>
-      <div class="col-xl-3 example-of-works-item">
+      <div class="col-sm-6 col-lg-4 col-xl-3 example-of-works-item">
         <img src="img/we-are-proud-image.jpg" alt="">
       </div>
-      <div class="col-xl-3 example-of-works-item">
+      <div class="col-sm-6 col-lg-4 col-xl-3 example-of-works-item">
         <img src="img/we-are-proud-image.jpg" alt="">
       </div>
-      <div class="col-xl-3 example-of-works-item">
+      <div class="col-sm-6 col-lg-4 col-xl-3 example-of-works-item">
         <img src="img/we-are-proud-image.jpg" alt="">
       </div>
-      <div class="col-xl-3 example-of-works-item">
+      <div class="col-sm-6 col-lg-4 col-xl-3 example-of-works-item">
         <img src="img/we-are-proud-image.jpg" alt="">
       </div>
-      <div class="col-xl-3 example-of-works-item">
+      <div class="col-sm-6 col-lg-4 col-xl-3 example-of-works-item">
         <img src="img/we-are-proud-image.jpg" alt="">
       </div>
-      <div class="col-xl-3 example-of-works-item">
+      <div class="col-sm-6 col-lg-4 col-xl-3 example-of-works-item">
         <img src="img/we-are-proud-image.jpg" alt="">
       </div>
-      <div class="col-xl-3 example-of-works-item">
+      <div class="col-sm-6 col-lg-4 col-xl-3 example-of-works-item">
         <img src="img/we-are-proud-image.jpg" alt="">
       </div>
-      <div class="col-xl-3 example-of-works-item">
+      <div class="col-sm-6 col-lg-4 col-xl-3 example-of-works-item">
         <img src="img/we-are-proud-image.jpg" alt="">
       </div>
-      <div class="col-xl-3 example-of-works-item">
+      <div class="col-sm-6 col-lg-4 col-xl-3 example-of-works-item">
         <img src="img/we-are-proud-image.jpg" alt="">
       </div>
-      <div class="col-xl-3 example-of-works-item">
+      <div class="col-sm-6 col-lg-4 col-xl-3 example-of-works-item">
         <img src="img/we-are-proud-image.jpg" alt="">
       </div>
-      <div class="col-xl-3 example-of-works-item">
+      <div class="col-sm-6 col-lg-4 col-xl-3 example-of-works-item">
         <img src="img/we-are-proud-image.jpg" alt="">
       </div>
-      <div class="col-xl-3 example-of-works-item">
+      <div class="col-sm-6 col-lg-4 col-xl-3 example-of-works-item">
         <img src="img/we-are-proud-image.jpg" alt="">
       </div>
-      <div class="col-xl-3 example-of-works-item">
+      <div class="col-sm-6 col-lg-4 col-xl-3 example-of-works-item">
         <img src="img/we-are-proud-image.jpg" alt="">
       </div>
-      <div class="col-xl-3 example-of-works-item">
+      <div class="col-sm-6 col-lg-4 col-xl-3 example-of-works-item">
         <img src="img/we-are-proud-image.jpg" alt="">
       </div>
-      <div class="col-xl-3 example-of-works-item">
+      <div class="col-sm-6 col-lg-4 col-xl-3 example-of-works-item">
         <img src="img/we-are-proud-image.jpg" alt="">
       </div>
-      <div class="col-xl-3 example-of-works-item">
+      <div class="col-sm-6 col-lg-4 col-xl-3 example-of-works-item">
         <img src="img/we-are-proud-image.jpg" alt="">
       </div>
-      <div class="col-xl-3 example-of-works-item">
+      <div class="col-sm-6 col-lg-4 col-xl-3 example-of-works-item">
         <img src="img/we-are-proud-image.jpg" alt="">
       </div>
-      <div class="col-xl-3 example-of-works-item">
+      <div class="col-sm-6 col-lg-4 col-xl-3 example-of-works-item">
         <img src="img/we-are-proud-image.jpg" alt="">
       </div>
-      <div class="col-xl-3 example-of-works-item">
+      <div class="col-sm-6 col-lg-4 col-xl-3 example-of-works-item">
         <img src="img/we-are-proud-image.jpg" alt="">
       </div>
-      <div class="col-xl-3 example-of-works-item">
+      <div class="col-sm-6 col-lg-4 col-xl-3 example-of-works-item">
         <img src="img/we-are-proud-image.jpg" alt="">
       </div>
-      <div class="col-xl-3 example-of-works-item">
+      <div class="col-sm-6 col-lg-4 col-xl-3 example-of-works-item">
         <img src="img/we-are-proud-image.jpg" alt="">
       </div>
-      <div class="col-xl-3 example-of-works-item">
+      <div class="col-sm-6 col-lg-4 col-xl-3 example-of-works-item">
         <img src="img/we-are-proud-image.jpg" alt="">
       </div>
-      <div class="col-xl-3 example-of-works-item">
+      <div class="col-sm-6 col-lg-4 col-xl-3 example-of-works-item">
         <img src="img/we-are-proud-image.jpg" alt="">
       </div>
     </div>
@@ -195,12 +195,12 @@
   <div class="container-fluid footer-inner-background">
     <div class="container footer">
       <div class="row footer-items">
-        <div class="col-xl-auto footer-item footer-inner-item">
+        <div class="col-lg-3 col-xl-auto footer-item footer-inner-item">
           <a href="index.html">
             <img src="img/footer-logo.svg" alt="Логотип Ставстрой">
           </a>
         </div>
-        <div class="col-xl-auto footer-item footer-inner-item">
+        <div class="col-lg-3 col-xl-auto footer-item footer-inner-item">
           <ul>
             <li>
               <a href="index.html">Главная</a>
@@ -222,7 +222,7 @@
             </li>
           </ul>
         </div>
-        <div class="col-xl-auto footer-item footer-inner-item">
+        <div class="col-lg-3 col-xl-auto footer-item footer-inner-item">
           <ul>
             <li>
               <a href="#">Гаражные ворота</a>
@@ -242,7 +242,7 @@
           </ul>
         </div>
 
-        <div class="col-xl-auto footer-item footer-inner-item">
+        <div class="col-lg-3 col-xl-auto footer-item footer-inner-item">
 
           <div class="footer-schedule">
             <span>08:30 - 17:30</span>
