Delete unused files

--- a/index.html
+++ b/index.html
@@ -17,27 +17,27 @@
 
     <div class="row header-top">
 
-      <div class="col-lg-auto col-xl-auto">
+      <div class="col-md-auto col-lg-auto col-xl-auto">
         <a href="index.html">
           <img src="img/header-logo.svg" alt="Логотип Ставстрой" title="Логотип Ставстрой" width="199" height="39">
         </a>
       </div>
 
-      <div class="col-lg-auto col-xl-auto schedule-wrapper">
+      <div class="col-md-auto col-lg-auto col-xl-auto schedule-wrapper">
         <div class="schedule">
           <span>08:30 - 17:30</span>
           <span>понедельник - пятница</span>
         </div>
       </div>
 
-      <div class="col-lg-auto col-xl-auto address-wrapper">
+      <div class="col-md-auto col-lg-auto col-xl-auto address-wrapper">
         <address class="address">
           <span>г. Ставрополь</span>
           <span>ул. Индустриальная, 46 А</span>
         </address>
       </div>
 
-      <div class="col-lg-auto col-xl-auto contacts-wrapper">
+      <div class="col-md-auto col-lg-auto col-xl-auto contacts-wrapper">
         <div class="contacts">
           <span>+7 8652 21 32 69</span>
           <span>горячаяя линия</span>
