Added tablet adaptation for site

--- a/aluminum-doors.html
+++ b/aluminum-doors.html
@@ -17,28 +17,28 @@
 
     <div class="row header-top">
 
-      <div class="col-lg-auto col-xl-auto">
+      <div class="col-md-auto col-lg-auto col-xl-auto">
         <a href="index.html">
           <img src="img/header-inner-logo.svg" alt="Логотип Ставстрой" title="Логотип Ставстрой" width="199"
             height="39">
         </a>
       </div>
 
-      <div class="col-lg-auto col-xl-auto schedule-wrapper">
+      <div class="col-md-auto col-lg-auto col-xl-auto schedule-wrapper">
         <div class="schedule">
           <span>08:30 - 17:30</span>
           <span>понедельник - пятница</span>
         </div>
       </div>
 
-      <div class="col-lg-auto col-xl-auto address-wrapper">
+      <div class="col-md-auto col-lg-auto col-xl-auto address-wrapper">
         <address class="address">
           <span>г. Ставрополь</span>
           <span>ул. Индустриальная, 46 А</span>
         </address>
       </div>
 
-      <div class="col-lg-auto col-xl-auto contacts-wrapper">
+      <div class="col-md-auto col-lg-auto col-xl-auto contacts-wrapper">
         <div class="contacts">
           <span>+7 8652 21 32 69</span>
           <span>горячаяя линия</span>
@@ -92,10 +92,10 @@
   <div class="container plastic-windows">
     <h2>Алюминиевые двери</h2>
     <div class="row">
-      <div class="col-lg-4 col-xl-3 plastic-windows-image">
+      <div class="col-md-12 col-lg-4 col-xl-3 plastic-windows-image">
         <img src="img/aluminum-doors-images.jpg" alt="">
       </div>
-      <div class="col-lg-8 col-xl-9 plastic-windows-text">
+      <div class="col-md-12 col-lg-8 col-xl-9 plastic-windows-text">
 
         <p>Компания «СтавОкно» занимается изготовлением и установкой алюминиевых дверей, отвечающих международным
           стандартам качества. Двери изготовляются по индивидуальному заказу – их размеры и конструктивные особенности
@@ -159,28 +159,28 @@
   <div class="container example-of-works">
     <h2>Примеры выполненых нами работ:</h2>
     <div class="row">
-      <div class="col-lg-4 col-xl-3 example-of-works-item">
+      <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3 example-of-works-item">
         <img src="img/we-are-proud-image.jpg" alt="">
       </div>
-      <div class="col-lg-4 col-xl-3 example-of-works-item">
+      <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3 example-of-works-item">
         <img src="img/we-are-proud-image.jpg" alt="">
       </div>
-      <div class="col-lg-4 col-xl-3 example-of-works-item">
+      <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3 example-of-works-item">
         <img src="img/we-are-proud-image.jpg" alt="">
       </div>
-      <div class="col-lg-4 col-xl-3 example-of-works-item">
+      <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3 example-of-works-item">
         <img src="img/we-are-proud-image.jpg" alt="">
       </div>
-      <div class="col-lg-4 col-xl-3 example-of-works-item">
+      <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3 example-of-works-item">
         <img src="img/we-are-proud-image.jpg" alt="">
       </div>
-      <div class="col-lg-4 col-xl-3 example-of-works-item">
+      <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3 example-of-works-item">
         <img src="img/we-are-proud-image.jpg" alt="">
       </div>
-      <div class="col-lg-4 col-xl-3 example-of-works-item">
+      <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3 example-of-works-item">
         <img src="img/we-are-proud-image.jpg" alt="">
       </div>
-      <div class="col-lg-4 col-xl-3 example-of-works-item">
+      <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3 example-of-works-item">
         <img src="img/we-are-proud-image.jpg" alt="">
       </div>
     </div>
@@ -191,12 +191,12 @@
   <div class="container-fluid footer-inner-background">
     <div class="container footer">
       <div class="row footer-items">
-        <div class="col-lg-3 col-xl-auto footer-item footer-inner-item">
+        <div class="col-md-auto col-lg-3 col-xl-auto footer-item footer-inner-item">
           <a href="index.html">
             <img src="img/footer-logo.svg" alt="Логотип Ставстрой">
           </a>
         </div>
-        <div class="col-lg-3 col-xl-auto footer-item footer-inner-item">
+        <div class="col-md-auto col-lg-3 col-xl-auto footer-item footer-inner-item">
           <ul>
             <li>
               <a href="index.html">Главная</a>
@@ -218,7 +218,7 @@
             </li>
           </ul>
         </div>
-        <div class="col-lg-3 col-xl-auto footer-item footer-inner-item">
+        <div class="col-md-auto col-lg-3 col-xl-auto footer-item footer-inner-item">
           <ul>
             <li>
               <a href="#">Гаражные ворота</a>
@@ -238,7 +238,7 @@
           </ul>
         </div>
 
-        <div class="col-lg-3 col-xl-auto footer-item footer-inner-item">
+        <div class="col-md-auto col-lg-3 col-xl-auto footer-item footer-inner-item">
 
           <div class="footer-schedule">
             <span>08:30 - 17:30</span>
