--- a/contacts.html
+++ b/contacts.html
@@ -17,28 +17,28 @@
 
     <div class="row header-top">
 
-      <div class="col-lg-auto col-xl-auto">
+      <div class="col-md-auto col-lg-auto col-xl-auto">
         <a href="index.html">
           <img src="img/header-inner-logo.svg" alt="Логотип Ставстрой" title="Логотип Ставстрой" width="199"
             height="39">
         </a>
       </div>
 
-      <div class="col-lg-auto col-xl-auto schedule-wrapper">
+      <div class="col-md-auto col-lg-auto col-xl-auto schedule-wrapper">
         <div class="schedule">
           <span>08:30 - 17:30</span>
           <span>понедельник - пятница</span>
         </div>
       </div>
 
-      <div class="col-lg-auto col-xl-auto address-wrapper">
+      <div class="col-md-auto col-lg-auto col-xl-auto address-wrapper">
         <address class="address">
           <span>г. Ставрополь</span>
           <span>ул. Индустриальная, 46 А</span>
         </address>
       </div>
 
-      <div class="col-lg-auto col-xl-auto contacts-wrapper">
+      <div class="col-md-auto col-lg-auto col-xl-auto contacts-wrapper">
         <div class="contacts">
           <span>+7 8652 21 32 69</span>
           <span>горячаяя линия</span>
@@ -92,7 +92,7 @@
   <div class="container contacts-page">
     <h2>Контакты</h2>
     <div class="row">
-      <div class="col-lg-5 col-xl-7 contacts-text">
+      <div class="col-md-12 col-lg-5 col-xl-7 contacts-text">
 
         <address class="contacts-text-address">
           <p>Наш адрес:</p>
@@ -114,7 +114,7 @@
           Наши менеджеры ждут Ваших звонков ежедневно с 09:00 до 18:00.</p>
 
       </div>
-      <div class="col-lg-7 col-xl-5 contacts-map">
+      <div class="col-md-12 col-lg-7 col-xl-5 contacts-map">
         <iframe
           src="https://yandex.ru/map-widget/v1/?um=constructor%3A79dfbf66b6d03fac9a14efddb5d73675034a4f5005dccd2a5fb22532fbc4f9a9&amp;source=constructor"
           width="500" height="400" frameborder="0">
@@ -128,12 +128,12 @@
   <div class="container-fluid footer-inner-background">
     <div class="container footer">
       <div class="row footer-items">
-        <div class="col-lg-3 col-xl-auto footer-item footer-inner-item">
+        <div class="col-md-auto col-lg-3 col-xl-auto footer-item footer-inner-item">
           <a href="index.html">
             <img src="img/footer-logo.svg" alt="Логотип Ставстрой">
           </a>
         </div>
-        <div class="col-lg-3 col-xl-auto footer-item footer-inner-item">
+        <div class="col-md-auto col-lg-3 col-xl-auto footer-item footer-inner-item">
           <ul>
             <li>
               <a href="index.html">Главная</a>
@@ -155,7 +155,7 @@
             </li>
           </ul>
         </div>
-        <div class="col-lg-3 col-xl-auto footer-item footer-inner-item">
+        <div class="col-md-auto col-lg-3 col-xl-auto footer-item footer-inner-item">
           <ul>
             <li>
               <a href="#">Гаражные ворота</a>
@@ -175,7 +175,7 @@
           </ul>
         </div>
 
-        <div class="col-lg-3 col-xl-auto footer-item footer-inner-item">
+        <div class="col-md-auto col-lg-3 col-xl-auto footer-item footer-inner-item">
 
           <div class="footer-schedule">
             <span>08:30 - 17:30</span>
