--- a/index.html
+++ b/index.html
@@ -90,45 +90,45 @@
   <div class="container why-us">
     <h2>Почему мы?</h2>
     <div class="row why-us-features">
-      <div class="col-lg-4 col-xl-4 why-us-features-item">
+      <div class="col-md-6 col-lg-4 col-xl-4 why-us-features-item">
         <img src="img/one-icon.svg" alt="Первое преимущество">
         <h3>Надежная компания!</h3>
         <p>Работаем с 2003 года! За все время остеклили более чем 127.000 квартир и офисных помещений!</p>
       </div>
-      <div class="col-lg-4 col-xl-4 why-us-features-item">
+      <div class="col-md-6  col-lg-4 col-xl-4 why-us-features-item">
         <img src="img/two-icon.svg" alt="Второе преимущество">
         <h3>Не посредники!</h3>
         <p>Имеем собственное производство! Осуществляем продажу без диллеров и всяких накруток!</p>
       </div>
-      <div class="col-lg-4 col-xl-4 why-us-features-item">
+      <div class="col-md-6  col-lg-4 col-xl-4 why-us-features-item">
         <img src="img/three-icon.svg" alt="Третье преимущество">
         <h3>Экономите 30%</h3>
         <p>Мы единственная компания в Ставрополе, которая предлагает низкие цены на окна!</p>
       </div>
     </div>
     <div class="row">
-      <div class="col-lg-4 col-xl-3 why-us-product-item">
+      <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3 why-us-product-item">
         <div class="why-us-product-item-wrapper">
           <img src="img/plastic-windows-image.jpg" alt="Пластиковые окна" title="Пластиковые окна" width="100"
             height="100">
           <span>Пластиковые окна</span>
         </div>
       </div>
-      <div class="col-lg-4 col-xl-3 why-us-product-item">
+      <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3 why-us-product-item">
         <div class="why-us-product-item-wrapper">
           <img src="img/plastic-doors-image.jpg" alt="Пластиковые двери" title="Пластиковые двери" width="100"
             height="100">
           <span>Пластиковые двери</span>
         </div>
       </div>
-      <div class="col-lg-4 col-xl-3 why-us-product-item">
+      <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3 why-us-product-item">
         <div class="why-us-product-item-wrapper">
           <img src="img/balconies-and-verandas-image.jpg" alt="Балконы и веранды" title="Балконы и веранды" width="100"
             height="100">
           <span>Балконы и веранды</span>
         </div>
       </div>
-      <div class="col-lg-4 col-xl-3 why-us-product-item">
+      <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3 why-us-product-item">
         <div class="why-us-product-item-wrapper">
           <img src="img/ventilated-facades-image.jpg" alt="Вентелируемые фасады" title="Вентелируемые фасады"
             width="100" height="100">
@@ -271,31 +271,31 @@
   <div class="container another-production">
     <h2>ДРУГАЯ ПРОДУКЦИЯ</h2>
     <div class="row">
-      <div class="col-lg-6 col-xl-4">
+      <div class="col-md-6 col-lg-6 col-xl-4">
         <div class="another-production-item">
           <img src="img/garage-doors-image.jpg" alt="">
           <span>Гаражные ворота</span>
         </div>
       </div>
-      <div class="col-lg-6 col-xl-4">
+      <div class="col-md-6 col-lg-6 col-xl-4">
         <div class="another-production-item">
           <img src="img/shutters-image.jpg" alt="">
           <span>Ролставни</span>
         </div>
       </div>
-      <div class="col-lg-6 col-xl-4">
+      <div class="col-md-6 col-lg-6 col-xl-4">
         <div class="another-production-item">
           <img src="img/mosquito-net-image.jpg" alt="">
           <span>Москитные сетки</span>
         </div>
       </div>
-      <div class="col-lg-6 col-xl-4">
+      <div class="col-md-6 col-lg-6 col-xl-4">
         <div class="another-production-item">
           <img src="img/handle-opening-limiter-image.jpg" alt="">
           <span>Ограничитель открывания ручки</span>
         </div>
       </div>
-      <div class="col-lg-6 col-xl-4">
+      <div class="col-md-6 col-lg-6 col-xl-4">
         <div class="another-production-item">
           <img src="img/handle-with-lock-image.jpg" alt="">
           <span>Ручка с замком </span>
@@ -313,28 +313,28 @@
     <h2>МЫ ГОРДИМСЯ СВОЕЙ РАБОТОЙ</h2>
     <p>ОЦЕНИТЕ НАШИ ПОСЛЕДНИЕ ПРОЕКТЫ</p>
     <div class="row">
-      <div class="col-lg-4 col-xl-3 we-are-proud-item">
+      <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3 we-are-proud-item">
         <img src="img/we-are-proud-image.jpg" alt="">
       </div>
-      <div class="col-lg-4 col-xl-3 we-are-proud-item">
+      <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3 we-are-proud-item">
         <img src="img/we-are-proud-image.jpg" alt="">
       </div>
-      <div class="col-lg-4 col-xl-3 we-are-proud-item">
+      <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3 we-are-proud-item">
         <img src="img/we-are-proud-image.jpg" alt="">
       </div>
-      <div class="col-lg-4 col-xl-3 we-are-proud-item">
+      <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3 we-are-proud-item">
         <img src="img/we-are-proud-image.jpg" alt="">
       </div>
-      <div class="col-lg-4 col-xl-3 we-are-proud-item">
+      <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3 we-are-proud-item">
         <img src="img/we-are-proud-image.jpg" alt="">
       </div>
-      <div class="col-lg-4 col-xl-3 we-are-proud-item">
+      <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3 we-are-proud-item">
         <img src="img/we-are-proud-image.jpg" alt="">
       </div>
-      <div class="col-lg-4 col-xl-3 we-are-proud-item">
+      <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3 we-are-proud-item">
         <img src="img/we-are-proud-image.jpg" alt="">
       </div>
-      <div class="col-lg-4 col-xl-3 we-are-proud-item">
+      <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3 we-are-proud-item">
         <img src="img/we-are-proud-image.jpg" alt="">
       </div>
     </div>
@@ -364,12 +364,12 @@
   <div class="container-fluid footer-background">
     <div class="container footer">
       <div class="row footer-items">
-        <div class="col-lg-3 col-xl-auto footer-item">
+        <div class="col-md-auto col-lg-3 col-xl-auto footer-item">
           <a href="index.html">
             <img src="img/footer-logo.svg" alt="Логотип Ставстрой">
           </a>
         </div>
-        <div class="col-lg-3 col-xl-auto footer-item">
+        <div class="col-md-auto col-lg-3 col-xl-auto footer-item">
           <ul>
             <li>
               <a href="index.html">Главная</a>
@@ -391,7 +391,7 @@
             </li>
           </ul>
         </div>
-        <div class="col-lg-3 col-xl-auto footer-item">
+        <div class="col-md-auto col-lg-3 col-xl-auto footer-item">
           <ul>
             <li>
               <a href="#">Гаражные ворота</a>
@@ -411,7 +411,7 @@
           </ul>
         </div>
 
-        <div class="col-lg-3 col-xl-auto footer-item">
+        <div class="col-md-auto col-lg-3 col-xl-auto footer-item">
 
           <div class="footer-schedule">
             <span>08:30 - 17:30</span>
